--- a/src/main/resources/static/project/report.html
+++ b/src/main/resources/static/project/report.html
@@ -91,7 +91,7 @@
     </script>
 </head>
 <body class="no-skin">
-<div id="navbar" class="navbar navbar-default  ace-save-state">
+<div id="navbar" class="navbar navbar-default          ace-save-state navbar-fixed-top">
     <script src="assets/js/nav-bar.js"></script>
 </div>
 
@@ -155,7 +155,7 @@
     <div class="main-content">
 
         <div class="main-content-inner">
-            <div class="breadcrumbs ace-save-state breadcrumbs-fixed" id="breadcrumbs">
+            <div class="breadcrumbs ace-save-state fixed" id="breadcrumbs">
                 <ul class="breadcrumb">
                     <li>
                         <i class="ace-icon fa fa-home home-icon"></i>
@@ -494,7 +494,6 @@
         <script src="/webresources/bootstrap/bootstrap-table/locale/bootstrap-table-zh-CN.js"></script>
         <script src="/webresources/bootstrap/bootstrap3-editable/js/bootstrap-editable.min.js"></script>
         <script src="/webresources/bootstrap/bootstrap-table/extensions/editable/bootstrap-table-editable.js"></script>
-        <script src="/webresources/common/js/userLogin.js"></script>
         <script src="assets/js/nav-list.js"></script>
 
 
