-修改部分字段

--- a/src/main/resources/static/project/member.html
+++ b/src/main/resources/static/project/member.html
@@ -444,7 +444,7 @@
                         field: 'id',
                         visible: false
                     }, {
-                        field: 'username',
+                        field: 'userID',
                         title: '用户名',
                         formatter:function (value) {
                             PROJECT_USERNAME.add(value);
