--- a/src/main/resources/static/project/project.html
+++ b/src/main/resources/static/project/project.html
@@ -179,7 +179,7 @@
 
                             <div class="col-sm-6" style="height:40px;line-height:35px; ">
                                 <label class="pull-right inline">
-                                    <strong class="muted smaller-90">关系</strong>
+                                    <strong class="muted smaller-90">工作路径</strong>
                                     <input id="linked-change-btn" checked="checked" type="checkbox"
                                            class="ace ace-switch ace-switch-5">
                                     <span class="lbl middle"></span>
@@ -190,7 +190,7 @@
                                            class="ace ace-switch ace-switch-5">
                                     <span class="lbl middle"></span>
                                 </label>
-                                <label class="pull-right inline">
+                                <label class="pull-right  inline">
                                     <strong class="muted smaller-90">创新方法</strong>
                                     <input id="name-change-btn" type="checkbox" class="ace ace-switch ace-switch-5">
                                     <span class="lbl middle"></span>
@@ -247,6 +247,7 @@
                                     </feMerge>
                                 </filter>
                             </g>
+
                             <g id="symbolsContainer">
 
                                 <symbol class="icon icon-download" id="icon-1" viewBox="0 0 1000 1000">
